--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -111,6 +111,9 @@
     <Compile Include="TimeSheet.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Toileting.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="UserDetail.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
