--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -120,6 +120,9 @@
     <Compile Include="UserLog.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="v_Logs.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="Model1.edmx">
